2006-02-14  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/sasl.py:
	Tweaks to try to get sasl working right.

2006-02-13  Daniel Henninger  <jadestorm@nc.rr.com>

	* tools/migrate.py:
	Fixed to use new twistwrap stuff.

	* src/sasl.py:
	Fixed duplicate xmlns declaration.

	* src/tlib/oscar.py:
	Fixed encoding that doesn't exist everywhere.

	* PyICQt.py:
	Adjusted call to python.

	* config_example.xml:
	Switched to port 5190 since 5238 seems to bust buddy icons.

	* src/web/handler.py:
	Updated to ask real jabber server if you are who you say you are.

	* src/sasl.py:
	Minor mods to fix duplicate xmlns declaration.

2006-02-12  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Fixed typoed repr.

	* src/debug.py:
	Adjusted ordering of debug output.

	* src/web/handler.py:
	Fixed string concat bug.

2006-02-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Applied fixes for dealing with reactors better.

	* src/avatar.py:
	* src/contact.py:
	* src/disco.py:
	* src/jabw.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/sasl.py:
	* src/session.py:
	* src/utils.py:
	* src/xmlconfig.py:
	Applied Florian's patch to use %r instead of %s.
	Fixes crashes during printing of unprintable chars.

	* src/session.py:
	Fixed handling of avatar hashes received.

	* tools/Makefile:
	Added developer Makefile.

	* src/config.py:
	* src/debug.py:
	* src/main.py:
	Switched to new debugging code.

	* src/avatar.py:
	* src/contact.py:
	* src/disco.py:
	* src/jabw.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/session.py:
	* src/utils.py:
	* src/xmlconfig.py:
	* src/xdb/__init__.py:
	* src/xdb/legacyaimtransport.py:
	* src/xdb/legacyjittransport.py:
	* src/xdb/xmlfiles.py:
	* src/web/handler.py:
	* src/legacy/__init__.py:
	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/legacy/legacyiq.py:
	* src/legacy/legacylist.py:
	Switched to new debugging style.

	* src/globals.py:
	Added extra settings.

	* src/lang.py: